--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -15,28 +15,30 @@ knitr::opts_chunk$set(
 ```
 
 
-```{r dist, fig.width = 6, fig.height = 6}
+```{r setup}
 require(mc2)
-require(ggplot2)
-t <- seq(-6, 10, by=0.5)
-r <- 0.03
-log_prob <- function(x){banana(x, r)}
-z_fun <- function(t1,t2){banana(cbind(t1,t2), r)}
-#x1 <- outer(t, t, function(t){t})
-z <- outer(t, t, z_fun)
-contour(t,t,z)
+set.seed(123)
 ```
 
-```{r demo, fig.width = 6, fig.height = 6}
-iter <- 5000
-x0   <- c(5,3)
-sig  <- 0.25
-x    <- metropolis(log_prob, x0, iter, sig)
+We begin by defining a target log posterior density and a grid for plotting.
+```{r grid, fig.width = 6, fig.height = 6}
+t        <- seq(-5, 5, by=0.1)
+log_prob <- function(x){peaks(x)}
+z_fun    <- function(t1,t2){peaks(cbind(t1,t2))}
+z        <- outer(t, t, z_fun)
+```
 
-df <- data.frame(x[,1], x[,2], 1:iter)
-colnames(df) <- c("x1", "x2", "iter")
-plt <- ggplot(df, aes(x = x1, y = x2)) + geom_point(color = "firebrick3", alpha = 0.1) +
-       geom_line(color = "firebrick3", alpha = 0.1) + xlim(-6,10) + ylim(-6,10) +
-  theme_bw() + ggtitle('Samples')
-plt
+First we sample using the Metropolis algoritm.
+```{r metropolis, fig.width = 6, fig.height = 6}
+# Sample
+iter  <- 5000
+x0    <- stats::rnorm(2)
+sig   <- 0.5
+chain <- metropolis(log_prob, x0, iter, sig)
+x     <- chain$x
+
+# Plot
+contour(t,t,z, main = paste(iter, 'samples'), xlim=c(-5,5), ylim=c(-5,5))
+points(x[,1], x[,2], pch = 20, col = "firebrick")
+#legend('topright', legend=c('log posterior', 'MCMC samples'))
 ```
